--- a/.github/workflows/ci-push-analysis.yml
+++ b/.github/workflows/ci-push-analysis.yml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet test --configuration Release --no-build --verbosity normal
         
       - name: Rodar Testes com Cobertura
-        run: dotnet test --configuration Release --no-build --verbosity normal /p:CollectCoverage=true /p:CoverletOutput=coverage.json /p:CoverletOutputFormat=json,cobertura
+        run: dotnet test --configuration Release --no-build --verbosity normal "/p:CollectCoverage=true" "/p:CoverletOutput=coverage.json" "/p:CoverletOutputFormat=json,cobertura"
 
       - name: Instalar ReportGenerator
         run: dotnet tool install --global dotnet-reportgenerator-globaltool
