--- a/.github/workflows/ci-push-analysis.yml
+++ b/.github/workflows/ci-push-analysis.yml
@@ -26,13 +26,32 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Rodar Testes
-        run: dotnet test --configuration Release --no-build --verbosity normal
+        run: |
+          mkdir -p TestResults
+          found=0
+          # Procura projetos de teste em todo o repositório (prefira colocar os testes em ./tests)
+          for proj in $(find . -type f \( -iname '*test*.csproj' -o -iname '*tests*.csproj' \)); do
+            found=1
+            echo "Executando testes: $proj"
+            dotnet test "$proj" --configuration Release --no-build --verbosity normal
+          done
+          if [ $found -eq 0 ]; then
+            echo "Aviso: nenhum projeto de teste (.csproj) encontrado."
+          fi
         
       - name: Rodar Testes com Cobertura
-        run: dotnet test --configuration Release --no-build --verbosity normal \
-          "/p:CollectCoverage=true" \
-          "/p:CoverletOutput=coverage.json" \
-          "/p:CoverletOutputFormat=\"json;cobertura\""
+        run: |
+          mkdir -p TestResults
+          found=0
+          for proj in $(find . -type f \( -iname '*test*.csproj' -o -iname '*tests*.csproj' \)); do
+            found=1
+            name=$(basename "$proj" .csproj)
+            echo "Executando testes com cobertura: $proj -> TestResults/${name}.coverage.*"
+            dotnet test "$proj" --configuration Release --no-build --verbosity normal "/p:CollectCoverage=true" "/p:CoverletOutput=TestResults/${name}.coverage" "/p:CoverletOutputFormat=json,cobertura"
+          done
+          if [ $found -eq 0 ]; then
+            echo "Aviso: nenhum projeto de teste encontrado. Pulando cobertura."
+          fi
 
       - name: Instalar ReportGenerator
         run: dotnet tool install --global dotnet-reportgenerator-globaltool
