feat: configurando classes para gerar build

--- a/src/ManaFoodProduct.Infrastructure/ManaFoodProduct.Infrastructure.csproj
+++ b/src/ManaFoodProduct.Infrastructure/ManaFoodProduct.Infrastructure.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ManaFoodProduct.Domain\ManaFoodProduct.Domain.csproj" />
+    <ProjectReference Include="..\ManaFoodProduct.Application\ManaFoodProduct.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
