--- a/src/ManaFoodProduct.Application/ManaFoodProduct.Application.csproj
+++ b/src/ManaFoodProduct.Application/ManaFoodProduct.Application.csproj
@@ -4,6 +4,15 @@
     <ProjectReference Include="..\ManaFoodProduct.Domain\ManaFoodProduct.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- DI e pacotes necessários para ServicesExtensions -->
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
