--- a/ManaFoodPoduct/pom.xml
+++ b/ManaFoodPoduct/pom.xml
@@ -82,6 +82,10 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
 
 		<!-- MySQL Driver -->
 		<dependency>
