--- a/.github/workflows/cd-delivery-main.yml
+++ b/.github/workflows/cd-delivery-main.yml
@@ -17,52 +17,52 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v4
 
-      - name: Configurar .NET
-        uses: actions/setup-dotnet@v4
+      - name: Configurar JDK (Temurin 17) e cache Maven
+        uses: actions/setup-java@v4
         with:
-          dotnet-version: 9.0.x
+          distribution: temurin
+          java-version: '17'
+          cache: 'maven'
 
-      - name: Restaurar dependências
-        run: dotnet restore
+      - name: Restaurar dependências (go-offline)
+        run: mvn -B -ntp dependency:go-offline -DskipTests
 
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
+      - name: Build e Rodar Testes
+        run: mvn -B -ntp clean verify
 
-      - name: Rodar Testes
-        run: dotnet test --configuration Release --no-build --verbosity normal
-  
-  # 2. Análise SonarQube
+  # 2. Análise SonarQube via Maven
   sonarqube-analysis:
     runs-on: ubuntu-latest
     needs: build-and-tests
     steps:
-      - name: Fazer checkout do repositório
+      - name: Fazer checkout do repositório (com histórico completo)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Configurar .NET
-        uses: actions/setup-dotnet@v4
+      - name: Configurar JDK (Temurin 17) e cache Maven
+        uses: actions/setup-java@v4
         with:
-          dotnet-version: '9.0.x'
+          distribution: temurin
+          java-version: '17'
+          cache: 'maven'
 
-      - name: Executar Análise SonarQube
+      - name: Executar Análise SonarQube (Maven)
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: |
-          dotnet tool install --global dotnet-sonarscanner
-          export PATH="$PATH:/home/runner/.dotnet/tools"
-          dotnet sonarscanner begin \
-            /k:"mana-food_mana-food-microsservice-produto" \
-            /o:"mana-food" \
-            /d:sonar.host.url="$SONAR_HOST_URL" \
-            /d:sonar.login="$SONAR_TOKEN" \
-            /d:sonar.branch.name="main" \
-            /d:sonar.exclusions="**/bin/**,**/obj/**,**/*.dll,**/*.exe" \
-            /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
-          dotnet build --no-incremental
-          dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
+          # Gera relatórios localmente (caso não existam)
+          mvn -B -ntp -DskipTests=false clean verify
+          # Executa a análise Sonar via plugin Maven
+          mvn -B -ntp sonar:sonar \
+            -Dsonar.host.url="$SONAR_HOST_URL" \
+            -Dsonar.login="$SONAR_TOKEN" \
+            -Dsonar.projectKey="mana-food_mana-food-microsservice-produto" \
+            -Dsonar.organization="mana-food" \
+            -Dsonar.branch.name="main" \
+            -Dsonar.exclusions="**/target/**,**/*.class" \
+            -Dsonar.coverage.jacoco.xmlReportPaths="target/site/jacoco/jacoco.xml"
 
   # 3. Build e Push da Imagem Docker
   docker-build-push:
@@ -77,18 +77,28 @@ jobs:
       - name: Fazer checkout do repositório
         uses: actions/checkout@v4
 
+      - name: Configurar JDK (Temurin 17) para build do artefato
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+          cache: 'maven'
+
+      - name: Gerar artefato (package) com Maven
+        run: mvn -B -ntp -DskipTests package
+
       - name: Instalar cosign
         if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20 #v3.5.0
+        uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20
         with:
           cosign-release: 'v2.2.4'
 
       - name: Configurar Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226
 
       - name: Login no registro ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -96,7 +106,7 @@ jobs:
 
       - name: Extrair metadados Docker
         id: meta
-        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
@@ -104,10 +114,11 @@ jobs:
 
       - name: Construir e enviar imagem Docker
         id: docker-build-and-push-image
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: Presentation/ManaFood.WebAPI/Dockerfile # ToDo: atualizar o caminho do Dockerfile
+          # Atualize este caminho para o Dockerfile do seu serviço Kotlin (ex.: ./Dockerfile ou ./app/Dockerfile)
+          file: ./Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -119,7 +130,8 @@ jobs:
         env:
           TAGS: ${{ steps.meta.outputs.tags }}
           DIGEST: ${{ steps.docker-build-and-push-image.outputs.digest }}
-        run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+        run: |
+          echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
 #  # 4. Trigger infra deployment pipeline #ToDo: descomentar quando o pipeline de infra estiver pronta
 #  trigger-pipeline-repo-infra:
