--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -1,4 +1,4 @@
-﻿name: "[Etapa 1] Pull Request" 
+﻿name: "[Etapa 1] Pull Request"
 
 on:
   pull_request:
@@ -13,49 +13,49 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v4
 
-      - name: Configurar .NET
-        uses: actions/setup-dotnet@v4
+      - name: Configurar JDK (Temurin 17) e cache Maven
+        uses: actions/setup-java@v4
         with:
-          dotnet-version: 9.0.x
+          distribution: temurin
+          java-version: '17'
+          cache: 'maven'
 
-      - name: Restaurar dependências
-        run: dotnet restore
+      - name: Restaurar dependências (go-offline)
+        run: mvn -B -ntp dependency:go-offline -DskipTests
 
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
+      - name: Build e Rodar Testes
+        run: mvn -B -ntp clean verify
 
-      - name: Rodar Testes
-        run: dotnet test --configuration Release --no-build --verbosity normal
-  
-  # 2. Análise SonarQube
+  # 2. Análise SonarQube via Maven
   sonarqube-analysis:
     runs-on: ubuntu-latest
     needs: build-and-tests
     steps:
-      - name: Fazer checkout do repositório
+      - name: Fazer checkout do repositório (com histórico completo)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Configurar .NET
-        uses: actions/setup-dotnet@v4
+      - name: Configurar JDK (Temurin 17) e cache Maven
+        uses: actions/setup-java@v4
         with:
-          dotnet-version: '9.0.x'
+          distribution: temurin
+          java-version: '17'
+          cache: 'maven'
 
-      - name: Executar Análise SonarQube
+      - name: Executar Análise SonarQube (Maven)
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} 
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: |
-          dotnet tool install --global dotnet-sonarscanner
-          export PATH="$PATH:/home/runner/.dotnet/tools"
-          dotnet sonarscanner begin \
-            /k:"mana-food_mana-food-microsservice-produto" \
-            /o:"mana-food" \
-            /d:sonar.host.url="$SONAR_HOST_URL" \
-            /d:sonar.login="$SONAR_TOKEN" \
-            /d:sonar.branch.name="main" \
-            /d:sonar.exclusions="**/bin/**,**/obj/**,**/*.dll,**/*.exe" \
-            /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
-          dotnet build --no-incremental
-          dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
+          # Executa build + testes (já foram executados no job anterior, mas garantir artefatos/relatórios)
+          mvn -B -ntp -DskipTests=false clean verify
+          # Executa a análise Sonar via plugin Maven
+          mvn -B -ntp sonar:sonar \
+            -Dsonar.host.url="$SONAR_HOST_URL" \
+            -Dsonar.login="$SONAR_TOKEN" \
+            -Dsonar.projectKey="mana-food_mana-food-microsservice-produto" \
+            -Dsonar.organization="mana-food" \
+            -Dsonar.branch.name="${{ github.head_ref }}" \
+            -Dsonar.exclusions="**/target/**,**/*.class" \
+            -Dsonar.coverage.jacoco.xmlReportPaths="target/site/jacoco/jacoco.xml"
