--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -66,7 +66,11 @@ jobs:
           mvn -B -ntp clean verify
           
           # Executa a análise Sonar via plugin Maven (usa propriedades do pom.xml)
-            mvn -B -ntp sonar:sonar \
-              -Dsonar.host.url="$SONAR_HOST_URL" \
-              -Dsonar.login="$SONAR_TOKEN" \
-              -Dsonar.branch.name="${{ github.head_ref }}"
+          mvn -B -ntp sonar:sonar \
+            -Dsonar.host.url="$SONAR_HOST_URL" \
+            -Dsonar.login="$SONAR_TOKEN" \
+            -Dsonar.projectKey="mana-food_mana-food-microsservice-produto" \
+            -Dsonar.organization="mana-food" \
+            -Dsonar.branch.name="${{ github.head_ref }}" \
+            -Dsonar.exclusions="**/target/**,**/*.class" \
+            -Dsonar.coverage.jacoco.xmlReportPaths="target/site/jacoco/jacoco.xml"
