--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 		<!-- SonarQube Properties -->
 		<sonar.organization>mana-food</sonar.organization>
 		<sonar.projectKey>mana-food_mana-food-microsservice-produto</sonar.projectKey>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.exclusions>**/target/**,**/*.class</sonar.exclusions>
 	</properties>
