--- a/.github/workflows/cd-delivery-main.yml
+++ b/.github/workflows/cd-delivery-main.yml
@@ -47,20 +47,35 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
       - name: Executar Análise SonarQube (Maven)
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: |
-          # Gera relatórios localmente (caso não existam)
-          mvn -B -ntp -DskipTests=false clean verify
-          # Executa a análise Sonar via plugin Maven
+          # Executa build + testes com cobertura JaCoCo
+          mvn -B -ntp clean verify
+          
+          # Executa a análise Sonar via plugin Maven (usa propriedades do pom.xml)
           mvn -B -ntp sonar:sonar \
             -Dsonar.host.url="$SONAR_HOST_URL" \
             -Dsonar.login="$SONAR_TOKEN" \
             -Dsonar.projectKey="mana-food_mana-food-microsservice-produto" \
             -Dsonar.organization="mana-food" \
-            -Dsonar.branch.name="main" \
+            -Dsonar.branch.name="${{ github.head_ref }}" \
             -Dsonar.exclusions="**/target/**,**/*.class" \
             -Dsonar.coverage.jacoco.xmlReportPaths="target/site/jacoco/jacoco.xml"
 
