feat: Configuração de variáveis de ambiente na pipeline e docker

--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -43,6 +43,20 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
+      - name: Criar arquivo .env para Docker Compose
+        run: |
+          echo "MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}" >> .env
+          echo "SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }}" >> .env
+          echo "SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }}" >> .env
+
+      - name: Subir banco de dados MySQL via Docker Compose
+        run: docker-compose up -d db-mana-food-product
+
+      - name: Aguardar banco de dados estar pronto
+        run: |
+          timeout 60 bash -c 'until docker-compose exec -T db-mana-food-product mysqladmin ping -h localhost -u root -p${{ secrets.MYSQL_ROOT_PASSWORD }} --silent; do echo "Aguardando MySQL..."; sleep 3; done'
+          echo "MySQL está pronto!"
+
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
@@ -61,6 +75,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
+          SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
+          SPRING_DATASOURCE_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
         run: |
           # Executa build + testes com cobertura JaCoCo
           mvn -B -ntp clean verify
@@ -74,3 +91,8 @@ jobs:
             -Dsonar.branch.name="${{ github.head_ref }}" \
             -Dsonar.exclusions="**/target/**,**/*.class" \
             -Dsonar.coverage.jacoco.xmlReportPaths="target/site/jacoco/jacoco.xml"
+
+      - name: Parar e remover containers
+        if: always()
+        run: docker-compose down -v
+
