--- a/.github/workflows/cd-delivery-main.yml
+++ b/.github/workflows/cd-delivery-main.yml
@@ -50,16 +50,16 @@ jobs:
       - name: Criar arquivo .env para Docker Compose
         run: |
           echo "MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}" >> .env
-          echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
+          echo "MYSQL_DATABASE=db_manafood_product" >> .env
           echo "SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }}" >> .env
           echo "SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }}" >> .env
 
       - name: Subir banco de dados MySQL via Docker Compose
-        run: docker-compose up -d db-mana-food-product
+        run: docker compose up -d db-mana-food-product
 
       - name: Aguardar banco de dados estar pronto
         run: |
-          timeout 60 bash -c 'until docker-compose exec -T db-mana-food-product mysqladmin ping -h localhost -u root -p${{ secrets.MYSQL_ROOT_PASSWORD }} --silent; do echo "Aguardando MySQL..."; sleep 3; done'
+          timeout 60 bash -c 'until docker compose exec -T db-mana-food-product mysqladmin ping -h localhost -u root -p${{ secrets.MYSQL_ROOT_PASSWORD }} --silent; do echo "Aguardando MySQL..."; sleep 3; done'
           echo "MySQL está pronto!"
 
       - name: Cache SonarQube packages
@@ -99,7 +99,7 @@ jobs:
 
       - name: Parar e remover containers
         if: always()
-        run: docker-compose down -v
+        run: docker compose down -v
 
   # 3. Build e Push da Imagem Docker
   docker-build-push:
